style.css
#Intro {
    background-color: lightgray;
    border-color: lightgray;
}

#Life {
    background-color: lightgray;
    border-color: lightgray;
}

