Got a good amount of my life page done, I need to fix the spacing and placement and just check over the information

--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
     border-color: lightgray;
 }
 
+#EarlyLife1 {
+    width: 600px;
+    height: 500px;
+}
+
